# studio-rust-mcp-server

./: .darklua-tests.json  .dockerignore  .gitignore  .luaurc  Cargo.toml  Dockerfile.ci  README.md  TODO.txt  build.rs  docker-compose.ci.yml  plugin-build.project.json  plugin.project.json  rokit.toml  run-tests.server.luau  selene.toml  stylua.toml  test-place-build.project.json  test-place.project.json  testez.d.luau  wally.toml
.cursor/: hooks.json  mcp.json  sync-sources.ps1  sync-sources.sh
.cursor/commands/: audit.md  ci-docker.md  ci-plugin-cloud.md  ci-plugin.md  ci.md  format.md  luau-optimize.md  watch-ci.md
.cursor/plans/: ci_release_overhaul_05a9a821.plan.md  codec_encodeinstance_test_suite_d12dd946.plan.md  darklua_plugin_build_682eca91.plan.md  fromdistinctpath_implementation_ba31b202.plan.md  inhouse_msgpack_utf8_transport_869158b3.plan.md  jest_lua_migration_e7cc3fd3.plan.md  (+3 more)
.lune/: run-tests.luau  upload-plugin.luau
docs/: ARCHITECTURE.md  cross-place-clipboard-copy.md  development.md
plugin/: .luaurc  Main.server.luau  MockWebSocketService.luau  Types.luau  UploadDetails.json  msgpack.luau  rokit.toml  runTests.luau  sanity.spec.luau  stylua.toml
scripts/: build-test-place.ps1  build-test-place.sh  ci-plugin-cloud.ps1  ci-plugin-cloud.sh  ci-plugin.ps1  ci-plugin.sh  ci.ps1  ci.sh  format.ps1  format.sh  install-plugin.ps1  install-plugin.sh  install.ps1  install.sh  test-docker.ps1  test-docker.sh  test-plugin-cloud.ps1  test-plugin.ps1  watch-ci.ps1  watch-ci.sh
src/: install.rs  main.rs  rbx_studio_server.rs  server_state.rs
(+67 files in other folders)
