[package]
name = "rbx-studio-mcp"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
rmcp = { version = "0.16", features = ["server", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.8", features = ["macros", "ws"] }
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
http = "1.4.0"
futures-util = "0.3.32"
roblox_install = "1.0.0"

[build-dependencies]
rojo = "7.6.1"

[profile.release]
debug = "line-tables-only"
